add starting trip list ui

--- a/app/src/variables.scss
+++ b/app/src/variables.scss
@@ -6,3 +6,4 @@ $color-label-bg-gray: #f9f9f9;
 $color-label-ph-gray: #757575;
 $color-input-focus: #fefee7;
 $color-text-normal: #000;
+$color-text-price: #2cb8e2;
