--- a/app/src/components/search-hero/SearchHero.module.scss
+++ b/app/src/components/search-hero/SearchHero.module.scss
@@ -81,6 +81,11 @@
   margin-bottom: 72px;
 }
 
+.inputFiller {
+  width: 100%;
+  height: 42px;
+}
+
 .formRow {
   display: flex;
   margin-bottom: 10px;
@@ -115,6 +120,10 @@
     border-bottom-right-radius: 4px;
 
     font-size: 12px;
+
+    &[type="date" i] {
+      font-family: Arial;
+    }
 
     &:focus {
       outline: none;
