--- a/app/src/components/trip-options/TripOptions.module.scss
+++ b/app/src/components/trip-options/TripOptions.module.scss
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     gap: 25px;
 
     .result {
@@ -42,6 +43,7 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
+          gap: 8px;
 
           h3 {
             font-size: 24px;
@@ -86,8 +88,53 @@
         display: flex;
         justify-content: space-between;
 
+        .flightDetails {
+          display: flex;
+          gap: 5px;
+
+          width: 40%;
+          padding-right: 5px;
+
+          .logoContainer {
+            height: 100%;
+            width: 30px;
+
+            display: flex;
+
+            img {
+              width: 30px;
+              height: 22px;
+            }
+          }
+
+          .description {
+            display: flex;
+            flex-direction: column;
+
+            line-height: 1.1;
+            font-size: 10px;
+            color: $color-label-text-bold-gray;
+
+            .flightNum {
+              font-size: 12px;
+            }
+            .flightClass {
+              margin: 5px 0;
+
+              color: $color-label-text-soft-gray-2;
+            }
+
+            .flightDuration {
+              margin-top: 3px;
+
+              color: $color-label-text-soft-gray;
+            }
+          }
+        }
+
         .timeAndAirport {
           padding-right: 20px;
+          padding-left: 5px;
           .infoRow {
             display: flex;
             gap: 12px;
