--- a/app/src/components/trip-options/TripOptions.module.scss
+++ b/app/src/components/trip-options/TripOptions.module.scss
@@ -134,10 +134,40 @@
 
         .timeAndAirport {
           padding-right: 20px;
-          padding-left: 5px;
+          padding-left: 12px;
+
+          width: 100%;
+
+          div:last-child {
+            margin-top: 3px;
+          }
+
           .infoRow {
             display: flex;
-            gap: 12px;
+
+            color: $color-label-text-soft-gray-3;
+
+            span {
+              font-size: 11px;
+              line-height: 120%;
+              font-weight: 700;
+            }
+
+            .time {
+              width: 55px;
+              font-size: 12px;
+
+              margin-right: 16px;
+            }
+
+            .date {
+              font-weight: 400;
+            }
+
+            .airport {
+              margin-left: auto;
+              font-size: 12px;
+            }
           }
         }
       }
