--- a/app/src/variables.scss
+++ b/app/src/variables.scss
@@ -3,6 +3,7 @@ $color-label-text-gray: #555;
 $color-label-text-bold-gray: #444;
 $color-label-text-soft-gray: #888;
 $color-label-text-soft-gray-2: #777;
+$color-label-text-soft-gray-3: #333;
 $color-label-bg-gray: #f9f9f9;
 $color-label-ph-gray: #757575;
 $color-input-focus: #fefee7;
