add ui support for round trips

--- a/app/src/variables.scss
+++ b/app/src/variables.scss
@@ -6,6 +6,7 @@ $color-label-text-soft-gray-2: #777;
 $color-label-text-soft-gray-3: #333;
 $color-label-bg-gray: #f9f9f9;
 $color-label-ph-gray: #757575;
+$color-listing-divider: #e5e5e5;
 $color-input-focus: #fefee7;
 $color-text-normal: #000;
 $color-text-price: #2cb8e2;
