--- a/app/src/components/trip-options/trip-item/TripItem.module.scss
+++ b/app/src/components/trip-options/trip-item/TripItem.module.scss
@@ -1,148 +1,94 @@
 @import "../../../variables.scss";
 
-.result {
-  width: 100%;
-  border: 1px solid #e5e5e5;
-  border-bottom: 3px solid #e5e5e5;
+.info {
+  padding: 10px 5px;
 
-  .priceAndCTA {
-    padding: 8px;
+  display: flex;
+  justify-content: space-between;
+
+  &.borderTop {
+    border-top: 1px dashed $color-listing-divider;
+  }
+
+  .flightDetails {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    gap: 5px;
 
-    background: $color-label-bg-gray;
-    border-bottom: 1px solid #e5e5e5;
+    width: 40%;
+    padding-right: 5px;
 
-    .price {
+    .logoContainer {
+      height: 100%;
+      width: 30px;
+
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 8px;
 
-      h3 {
-        font-size: 24px;
-        font-weight: 800;
-        letter-spacing: -1.8px;
-
-        color: $color-text-price;
-      }
-      span {
-        font-size: 10px;
-        color: $color-label-text-gray;
+      img {
+        width: 30px;
+        height: 22px;
       }
     }
 
-    button {
-      display: block;
-      width: 160px;
-      padding: 12px 25px 12px 15px;
+    .description {
+      display: flex;
+      flex-direction: column;
 
-      background-color: #e85e12;
-      border: 0;
-      border-radius: 2px;
+      line-height: 1.1;
+      font-size: 10px;
+      color: $color-label-text-bold-gray;
 
-      font-size: 16px;
-      line-height: 1;
-      font-weight: 700;
-      color: #fff;
+      .flightNum {
+        font-size: 12px;
+      }
+      .flightClass {
+        margin: 5px 0;
 
-      position: relative;
+        color: $color-label-text-soft-gray-2;
+      }
 
-      span:last-child {
-        position: absolute;
-        right: 12px;
-        font-weight: 700;
+      .flightDuration {
+        margin-top: 3px;
+
+        color: $color-label-text-soft-gray;
       }
     }
   }
 
-  .info {
-    padding: 10px 5px;
+  .timeAndAirport {
+    padding-right: 20px;
+    padding-left: 12px;
 
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
 
-    .flightDetails {
-      display: flex;
-      gap: 5px;
-
-      width: 40%;
-      padding-right: 5px;
-
-      .logoContainer {
-        height: 100%;
-        width: 30px;
-
-        display: flex;
-
-        img {
-          width: 30px;
-          height: 22px;
-        }
-      }
-
-      .description {
-        display: flex;
-        flex-direction: column;
-
-        line-height: 1.1;
-        font-size: 10px;
-        color: $color-label-text-bold-gray;
-
-        .flightNum {
-          font-size: 12px;
-        }
-        .flightClass {
-          margin: 5px 0;
-
-          color: $color-label-text-soft-gray-2;
-        }
-
-        .flightDuration {
-          margin-top: 3px;
-
-          color: $color-label-text-soft-gray;
-        }
-      }
+    div:last-child {
+      margin-top: 3px;
     }
 
-    .timeAndAirport {
-      padding-right: 20px;
-      padding-left: 12px;
+    .infoRow {
+      display: flex;
 
-      width: 100%;
+      color: $color-label-text-soft-gray-3;
 
-      div:last-child {
-        margin-top: 3px;
+      span {
+        font-size: 11px;
+        line-height: 120%;
+        font-weight: 700;
       }
 
-      .infoRow {
-        display: flex;
+      .time {
+        width: 55px;
+        font-size: 12px;
 
-        color: $color-label-text-soft-gray-3;
+        margin-right: 16px;
+      }
 
-        span {
-          font-size: 11px;
-          line-height: 120%;
-          font-weight: 700;
-        }
+      .date {
+        font-weight: 400;
+      }
 
-        .time {
-          width: 55px;
-          font-size: 12px;
-
-          margin-right: 16px;
-        }
-
-        .date {
-          font-weight: 400;
-        }
-
-        .airport {
-          margin-left: auto;
-          font-size: 12px;
-        }
+      .airport {
+        margin-left: auto;
+        font-size: 12px;
       }
     }
   }
