--- a/app/src/pages/Homepage.module.scss
+++ b/app/src/pages/Homepage.module.scss
@@ -1,4 +1,10 @@
 .wrapper {
   width: 100%;
   min-height: 100vh;
+
+  @media (min-width: 720px) {
+    max-width: 720px;
+
+    margin: 0 auto;
+  }
 }
